--- a/html_css_js/ch04/if-2.html
+++ b/html_css_js/ch04/if-2.html
@@ -2,18 +2,32 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-widhth, initial_scale=1.0">
+        <meta name="viewport" content="width=device-width, initial_scale=1.0">
         <title>조건문-1</title>
     </head>
     <body>
         <script>
-            var userNumber = prompt("숫자 입력하세요!!")
-            if (userNumber !== null) {
-                (userNumber % 3 === 0) ? alert("3의 배수입니다.") : alert("3의 배수가 아닙니다.");
-            } else {
-                alert("입력 취소")
+            var userNumber;
+
+            while (true) {
+                userNumber = prompt("숫자 입력하세요!!");
+                if (userNumber === null) {
+                    alert("입력 취소");
+                    break; 
+                } else if (userNumber.trim() === "") {
+                    alert("입력값이 비어있습니다. 다시 입력해주세요.");
+                } else if (isNaN(userNumber)) {
+                    alert("숫자를 입력해주세요.");
+                } else {
+                    userNumber = parseFloat(userNumber); // Convert input to a number
+                    if (userNumber % 3 === 0) {
+                        alert("3의 배수입니다.");
+                    } else {
+                        alert("3의 배수가 아닙니다.");
+                    }
+                    break; // Exit the loop if a valid number is provided
+                }
             }
-            
         </script>
     </body>
 </html>
